kubernetes/apps/hydra/federated-cloud-platform/httpRoute-admin-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fcp-admin-https
  namespace: federated-cloud-platform
spec:
  parentRefs:
  - name: https-gateway-thetillhoff-de
    namespace: gateways
  hostnames:
  - admin.fcp.thetillhoff.de
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: admin-web
      port: 8080
